bk_ida/sjengida/g3/reset_board
/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/reset_board/src/utils.c:1577:23: error: use of undeclared identifier 'unk_428800'
qmemcpy( init_board, &unk_428800, sizeof( init_board)); 
                      ^
1 error generated.
make: *** [/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/reset_board/src/obj/utils.o] Error 1
